--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "babel-loader": "^7.0.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "prop-types": "^15.5.10",
         "react": "^15.5.4",
         "react-autosuggest": "^9.0.1",
         "react-dom": "^15.5.4",
