--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "babel-core": "^6.24.1",
+        "babel-core": "^6.26.0",
         "babel-loader": "^7.0.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
@@ -16,8 +16,10 @@
     "main": "main.jsx",
     "license": "MIT",
     "devDependencies": {
+        "babel-jest": "^22.4.3",
         "jest": "^21.0.2",
         "karma-webpack": "^2.0.3",
-        "mocha": "^3.3.0"
+        "mocha": "^3.3.0",
+        "regenerator-runtime": "^0.11.1"
     }
 }
